﻿drkns 18.07.2014 01:49:25 +0200 - build 4007

1. Не работало получение закладок в редакторе. И уже давно.

zg 18.07.2014 01:06:52 +0200 - build 4006

1. при удалении редактора внутри события EE_READ, редактор удаляется только после окончания обработки этого события.

2. при удалении просмотра внутри события VE_READ, просмотр удаляется только после окончания обработки этого события.

zg 17.07.2014 02:44:33 +0200 - build 4005

1. 0002734: Сломали диалоги.
   вылез древний баг: при удалении неактивного окна, активное окно исчезает.

2. редактор и просмотр при определённых условиях могли портить память.

shmuel 16.07.2014 18:15:38 +0200 - build 4004

1. Дополнение доступа плагина LuaMacro к буферу экрана.

zg 16.07.2014 01:13:27 +0200 - build 4003

1. с форума: некоректный заголовок консоли при вызове macrobrowser'а через Plugin.Menu.

zg 15.07.2014 21:39:44 +0200 - build 4002

1. с форума: падние в ACTL_GETWINDOWINFO.

shmuel 14.07.2014 20:56:15 +0200 - build 4001

1. Plugin.Menu(), Plugin.Config() и Plugin.Command() возвращают false при неудаче.

drkns 14.07.2014 14:39:33 +0200 - build 4000

1. 0002709: Запрос привилегий администратора может быть невидим если вызван макросом

zg 13.07.2014 14:50:01 +0200 - build 3999

1. уточнение 3992: диалоги показывались только один раз после создания.

drkns 13.07.2014 14:24:22 +0200 - build 3998

1. Опция Interface.FormatNumberSeparators теперь имеет строковый тип.

2. В отладочном билде включен SmallerTypeCheck.

3. Рефакторинг.

drkns 12.07.2014 20:33:45 +0200 - build 3997

1. Уточнение 3996 и ещё пара мелочей.

drkns 12.07.2014 14:18:49 +0200 - build 3996

1. Добавлена опция /set:<parameter>=<value>, позволяющая переопределять основные настройки (см. far:config).

drkns 12.07.2014 09:45:28 +0200

1. Во внешний DialogBuilder добавлена поддержка списков.

zg 11.07.2014 22:11:38 +0200 - build 3995

1. уточнение 3993: при переходе по +/- в просмотре не вызывался EE_READ.

zg 11.07.2014 19:21:21 +0200 - build 3994
