@@ -90,9 +90,9 @@ public:
 	void SetFlags( DWORD flags ) { Flags.Set(flags); }
 	void SetDeleting(void);
 	bool IsDeleting(void);
-	void Lock(void);
-	void Unlock(void);
-	bool IsLocked(void);
+	void SetBlock(void);
+	void RemoveBlock(void);
+	bool IsBlocked(void);
 
 protected:
 	bool DynamicallyBorn;
@@ -110,5 +110,5 @@ private:
 	Frame *FrameToBack;
 	Frame *NextModal;
 	bool Deleting;
-	long LockCounter;
+	long BlockCounter;
 };
