@@ -1,4 +1,8 @@
-﻿drkns 18.07.2014 01:49:25 +0200 - build 4007
+﻿zg 18.07.2014 01:59:14 +0200 - build 4008
+
+1. уточнение 4006.
+
+drkns 18.07.2014 01:49:25 +0200 - build 4007
 
 1. Не работало получение закладок в редакторе. И уже давно.
 
